fix alignment of switch icons

--- a/app/styles/app/modules/switch.sass
+++ b/app/styles/app/modules/switch.sass
@@ -62,5 +62,7 @@
     pointer-events: none
     opacity: .5
 
-  .icon
+  [class^="icon-"]
     +colorSVG(white)
+    width: 15px
+    height: 100%
